gitops/clusters/zeus/infra/30-edge/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: zeus-gw
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.zeus"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.zeus"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: zeus-wildcard-tls
